--- a/array-behavior.html
+++ b/array-behavior.html
@@ -14,5 +14,5 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<script src="../lodash/dist/lodash.js"></script>
+<link rel="import" href="../lodash-import/lodash.html">
 <script src="../array-behavior/array-behavior.js"></script>
