Revert "Test using lodash-import for lodash dependency."
This reverts commit c3b5f8983475359907df23824db06bc3e580c812.

--- a/array-behavior.html
+++ b/array-behavior.html
@@ -14,5 +14,5 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<link rel="import" href="../lodash-import/lodash.html">
+<script src="../lodash/dist/lodash.js"></script>
 <script src="../array-behavior/array-behavior.js"></script>
